update controllers and services